[package]
name = "rust-toy-ca"
author = "Supermasita"
repository = "https://github.com/supermasita/rust-toy-ca"
website = "https://github.com/supermasita/rust-toy-ca"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
openssl-sys = "0.9"
openssl = "0.10"
serde = "1.0.147"
serde_derive = "1.0.147"
base64 = "0.13.1"
rand = "0.8.5"
clap = { version = "4.0.26", features = ["derive"] }
clap_lex = "0.3.0"
proc-macro2 = "1.0.47"  # to resolve conflict when adding clap
log = "0.4"
log4rs = "1"
